...
object DefaultLibraryDataCallback : RoomDatabase.Callback() {
    override fun onCreate(db: SupportSQLiteDatabase) {
        super.onCreate(db)

        db.execSQL(
            "INSERT INTO item_types (id, name, sort_order) VALUES (?, ?, ?)",
            arrayOf<Any?>(DefaultLibraryData.BOOK_TYPE_ID, "Book", 0)
        )
        db.execSQL(
            "INSERT INTO item_types (id, name, sort_order) VALUES (?, ?, ?)",
            arrayOf<Any?>(DefaultLibraryData.MOVIE_TYPE_ID, "Movie", 1)
        )
        db.execSQL(
...
